--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
