--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-select": "^1.1.2",
