--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.1",
     "@radix-ui/react-select": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.1",
+    "@react-spring/web": "^9.6.1",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -24,7 +25,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-router-dom": "^6.6.1",
-    "react-spinners": "^0.13.7"
+    "react-spinners": "^0.13.7",
+    "react-spring": "^9.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
